# rpc-toolkit

./: .gitmodules  Cargo.toml
rpc-toolkit/: Cargo.toml
rpc-toolkit-macro/: Cargo.toml
rpc-toolkit-macro-internals/: Cargo.toml
rpc-toolkit-macro-internals/src/: lib.rs
rpc-toolkit-macro-internals/src/command/: build.rs  mod.rs  parse.rs
rpc-toolkit-macro-internals/src/rpc_handler/: build.rs  mod.rs  parse.rs
rpc-toolkit-macro-internals/src/rpc_server/: build.rs  mod.rs  parse.rs
rpc-toolkit-macro-internals/src/run_cli/: build.rs  mod.rs  parse.rs
rpc-toolkit-macro/src/: lib.rs
rpc-toolkit/src/: cli.rs  command.rs  command_helpers.rs  context.rs  handler.rs  lib.rs  metadata.rs  rpc_server_helpers.rs  test.rs  util.rs
rpc-toolkit/src/handler/: adapters.rs  from_fn.rs  marker.rs  mod.rs  parent.rs
rpc-toolkit/src/server/: http.rs  mod.rs  socket.rs
rpc-toolkit/tests/: compat.rs  handler.rs  test.rs
src/: cli.rs  context.rs  lib.rs  ts.rs
src/handler/: adapters.rs  from_fn.rs  mod.rs  parent.rs
src/server/: http.rs  mod.rs
tests/: handler.rs  test.rs
