[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
name = "rpc-toolkit-macro"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
cli-cookies = ["rpc-toolkit-macro-internals/cli-cookies"]

[dependencies]
proc-macro2 = "1.0.1"
rpc-toolkit-macro-internals = { path = "../rpc-toolkit-macro-internals" }
syn = "1.0.62"
