[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
name = "rpc-toolkit-macro"
version = "0.2.1"
description = "macros for rpc-toolkit"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
rpc-toolkit-macro-internals = { version = "0.2", path = "../rpc-toolkit-macro-internals" }
syn = "1.0"
